# dot-home

./: .autom4te.cfg  .gitattributes  .gitignore  .vimperatorrc  Makefile  Makefile.in  XCompose  Xresources  audacity.cfg  autogen.sh  cdrdao  channels.scm  config.scm  configure.ac  conkerorrc  dircolors  editrc  emacs  emacs.el  environment.xml.in  fonts.conf  gemrc  gitconfig  gtkrc  gtkrc-2.0  hunspell_en_US  hunspell_sv  indent.pro  inputrc  irbrc  mailcap  mbsyncrc  offlineimaprc  ratpoisonrc  rss2email.cfg  safari.css  sbclrc  screenrc  sieve  system.scm  (+9 more)
Config/: Cygwin  Darwin
X11/: Xresources
calendar/: easters.ics  holidays.ics  payday.ics  solar-events.ics
cmus/: now.theme  rc
emacs/: custom.el  init.el  now-theme.el
emacs.d/: init.el  now-theme.el
emacs.d/delayed-inits/: auth-source.el  buff-menu.el  calendar.el  cc-mode.el  company.el  compile.el  desktop.el  diff-mode.el  diff.el  dired.el  ediff.el  evil-multiedit.el  evil.el  files.el  find-func.el  flx-ido.el  gnus-group.el  gnus-msg.el  gnus-spec.el  gnus-sum.el  gnus.el  grep.el  help-mode.el  hideshow.el  holidays.el  ido.el  info.el  lisp-mode.el  magit-popup.el  magit.el  man.el  message.el  minibuffer.el  mu4e.el  mule.el  nnimap.el  nxml-mode.el  org-agenda.el  org-capture.el  org-clock.el  (+26 more)
emacs.d/dir-locals/: albatross.el  work.el
emacs.d/inits/: disp-table.el  package.el  user-interface.el
emacs.d/site-lisp/: autotest-mode.el  buff-menu-ext.el  counsel-buffer-menu.el  docfold.el  evil-paredit.el  google-java-format.el  hide-mode-line.el  highlight-selected-window.el  now-cc-mode.el  now-compile.el  now-dired.el  now-evil.el  now-git.el  now-gxref.el  now-hideshow.el  now-init.el  now-ivy.el  now-mu4e.el  now-org-colview.el  now-org.el  now-ruby.el  now-scala-mode.el  now-simple.el  now-smie.el  now-sort.el  rnc-mode.el  typescriptreact-mode.el  use-package-evil-bind.el  velocity-mode.el
emacs/delayed-inits/: buff-menu.el  calc.el  calendar.el  compile.el  evil.el  grep.el  ido.el  ispell.el  magit.el  make-mode.el  org-agenda.el  org-clock.el  org-colview.el  org.el  paredit.el  paren.el  recentf.el  rng-loc.el  ruby-mode.el  sh-script.el  solar.el  tabulated-list.el
emacs/dir-locals/: work.el
emacs/init/: dired.el
emacs/inits/: bs.el  cc-mode.el  desktop.el  dired-aux.el  ido.el  man.el  nxml-mode.el  package.el
emacs/site-lisp/: buff-menu-ext.el  compile-package.el  docfold.el  evil-paredit.el  google-java-format.el  hide-mode-line.el  highlight-selected-window.el  ligatures.el  nmc-mode.el  now-calc.el  now-cc-mode.el  now-compile.el  now-counsel-evil.el  now-dired.el  now-disp-table.el  now-eglot.el  now-elisp-mode.el  now-gxref.el  now-init.el  now-isearch.el  now-make-mode.el  now-nxml-mode.el  now-org-agenda.el  now-org-clock.el  now-project.el  now-rnc-mode.el  now-ruby.el  now-scala-mode.el  now-sql-indent.el  now-xref.el  project.el  t-ext.el  t-tests.el  t.el  typescriptreact-mode.el  userloaddefs.el  velocity-mode.el
firefox/: mimeTypes.rdf  permissions.sql  profiles.ini  search-metadata.json  search.sql  stylish.rdf  stylish.sql  user.js
firefox/chickenfoot/: mediafire-automatic-download.js
firefox/gm_scripts/: config.xml  delicious-favicons.user.js  divshare-auto-download.user.js  gmail-fixed-font-toggle.user.js  gmail-juno-player.js  gmail-juno-player.user.js  gmail-macros.user.js  gmail-secure.user.js  google-favicons.user.js  google-reader-download-linked-content.user.js  google-reader-view-original-in-background.user.js  juno-download-all-link.user.js  mediafire-auto-download.user.js  secure-google-docs-connection.user.js  update-google-web-history.user.js  vbulletin-cleanup.user.js  zshare-mp3-links.user.js
firefox/searchplugins/: adlibris.xml  codesearch.xml  delicious-tag.xml  discogs.xml  gatherer.xml  google-bookmarks.xml  google-dictionary.xml  hittase-where.xml  hittase-who.xml  imdb.xml  juno-records.xml  mancx.xml  posix.xml  thepiratebayorg.xml  thepiratebayse.xml  tvragecom.xml  youtube.xml
fontconfig/: fonts.conf
git/: config  config.in
gnupg/: gpg.conf
gradle/: gradle.properties
host/: Makefile  host.mk
host/dev-nikwei/: environment.xml.in  host.mk
host/generic/: environment.xml.in  host.mk
host/nweibull-ws/: host.mk
host/portair.local/: host.mk
hunspell/: en_US.aff.patch
irssi/: clean.theme  config  default.theme
ivman/: IvmConfigActions.xml  IvmConfigBase.xml  IvmConfigConditions.xml  IvmConfigProperties.xml
lftp/: rc
lighttpd/: lighttpd.conf
m2/: settings.xml  settings.xml.in
mixxx/: mixxx.cfg
mixxx/controllers/: XONEK2.midi.js  XONEK2.midi.xml
mplayer/: config
mutt/: aliases  generate-folder-hooks  mail-thread-filter  mailhops  muttrc  signature  unbind
os/: Makefile  Makefile.Darwin  os.mk
os/Cygwin/: dialog-death.ini  hotkeys.ahk  minttyrc  os.mk  registry.xsl
os/Darwin/: NOW.terminal  os.mk
os/Linux/: os.mk  xsession.in
os/generic/: os.mk
ratpoison/: ratpoisonrc
sbt/1.0/: global.sbt
share/emacs/: color-theme-autoloads.el  color-theme.el  cygwin-mount.el  digraph.el  hide-mode-line.el  smex.el  windows-path.el
vim/: filetype.vim  vimrc
vim/colors/: now.vim
vim/compiler/: jing.vim  rakelookout.vim  rakexpectations.vim  xmllint.vim
vim/doc/: ascii-tables.txt
vim/ftplugin/: docbk.vim  gitcommit.vim  man.vim  nmc.vim  nml.vim  urlextract.vim
vim/indent/: nml.vim
vim/macros/: less.vim  quickfix.vim
vim/syntax/: ilprec.vim  javascript.vim  markdown.vim  nml.vim  prolog.vim  treetop.vim
vim/templates/: CC.license  LGPL.license  automake.template  c.template  cpp.template  default.license  make.template  mp.template  scheme.template  vim.template  xdefaults.template  xslt.template  yaml.template  zsh.template
vimperator/: bookmarks.json  vimperatorrc
vimperator/plugin/: bookmarks.js  delicious.js  edit-textarea-in-editor.js  feed-some-keys.js  liberator-overlay-ext.js
vlc/: vlcrc
xmonad/: xmonad.hs
zsh/: .zlogin  .zprofile  .zshenv  .zshrc  zlogin  zlogin.in  zprofile  zprofile.in  zshenv  zshrc  zshrc.in
zsh/functions/: _cdrdao  _git  _j  _mem-map  _unpack  _up  (+22 more)
(+293 files in other folders)
